--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/sb
+spring.datasource.url=jdbc:mysql://34.133.88.10:3306/sb
 spring.datasource.username=root
-spring.datasource.password=.noMeacuerdo.22.
+spring.datasource.password=bancoroot
