--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://34.133.88.10:3306/sb
 spring.datasource.username=root
 spring.datasource.password=bancoroot
+#spring.cloud.gcp.sql.database-name=sb
+#spring.cloud.gcp.sql.instance-connection-name=apispringsb:us-central1:sb
