--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://34.133.88.10:3306/sb
+#spring.datasource.url=jdbc:mysql://34.133.88.10:3306/sb
+spring.datasource.url=jdbc:mysql://localhost:3306/sb
+spring.datasource.password=.noMeacuerdo.22.
 spring.datasource.username=root
-spring.datasource.password=bancoroot
+#spring.datasource.password=bancoroot
 #spring.cloud.gcp.sql.database-name=sb
 #spring.cloud.gcp.sql.instance-connection-name=apispringsb:us-central1:sb
